--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^2.14.0
   cloud_firestore: ^4.8.2
+  http: ^1.1.0
 
 dev_dependencies:
   flutter_test:
